--- a/scheme/Makefile
+++ b/scheme/Makefile
@@ -15,7 +15,8 @@ INCLUDE=-I$(INCDIR)
 
 # Pour activer les sorties INFO_MSG, ajouter -DVERBOSE aux CFLAGS 
 CFLAGS=-Wall -ansi $(INCLUDE)
-LFLAGS=-lm
+LFLAGS=-lm -lreadline
+
 
 CFLAGS_DBG=$(CFLAGS) -g -DDEBUG -Wall
 CFLAGS_RLS=$(CFLAGS)
